@@ -11,6 +11,8 @@
 #include <iterator>
 #include <boost/lexical_cast.hpp>
 #include <boost/tokenizer.hpp>
+#include <boost/filesystem/path.hpp>
+#include <boost/filesystem/convenience.hpp>
 
 #include "commands.hh"
 #include "constants.hh"
@@ -1458,9 +1460,9 @@ CMD(checkout, "tree", "MANIFEST-ID DIRECTORY\nDIRECTORY", "check out tree state 
 
   if (dir != string("."))
     {
-      fs::path co_dir(dir);
-      mkdir_p(co_dir);
-      chdir(co_dir.c_str());
+      fs::path co_dir = mkpath(dir);
+      fs::create_directories(co_dir);
+      chdir(co_dir.native_directory_string().c_str());
     }
 
   transaction_guard guard(app.db);
