@@ -1,7 +1,8 @@
 2004-05-13  Nathaniel Smith  <njs@codesourcery.com>
 
-	* commands.cc (checkout): Make checkout directory an fs::path, not
-	a local_path.
+	* commands.cc: Include boost/filesystem/path.hpp,
+	boost/filesystem/convenience.hpp.
+	(checkout): Make checkout directory an fs::path, not a local_path.
 	
 2004-05-13  Nathaniel Smith  <njs@codesourcery.com>
 
